--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 
 <body>
     <div id="headerDiv">
-        <h1>
+        <p id="h1Div">
             Karuta Card Game
-        </h1>
-        <h2>
+        </p>
+        <p id="h2Div">
             English Pop Edition
-        </h2>
-        <h3>
+        </p>
+        <p id="h3Div">
             by Can Tosun
-        </h3>
+        </p>
     </div>
     <br/>
     <br/>
@@ -177,9 +177,17 @@
         {
             background-color: transparent;
         }
-        h1
+        #h1Div
         {
             font-size: 300%;
+        }
+        #h2Div
+        {
+            font-size: 200%;
+        }
+        #h3Div
+        {
+            font-size: 150%;
         }
         #currentSongArtist, #currentSongTitle
         {
