--- a/index.html
+++ b/index.html
@@ -214,10 +214,11 @@
         #h1Div
         {
             font-size: 300%;
+            font-weight: bold;
         }
         #h2Div
         {
-            font-size: 200%;
+            font-size: 175%;
         }
         #h2DivButton
         {
@@ -227,7 +228,7 @@
         }
         #h3Div
         {
-            font-size: 150%;
+            font-size: 125%;
         }
         #currentSongArtist, #currentSongTitle
         {
