--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
         Karuta Card Game
     </p>
     <button id="h2DivButton" onclick="ChangeEdition()">
-        <p id="h2Div">
+        <span class="material-icons">sync</span>
+        <span id="h2Div">
             English Pop Edition
-        </p>
+        </span>
     </button>
     <p id="h3Div">
         by Can Tosun
@@ -223,7 +224,7 @@
         #h2DivButton
         {
             background-color: transparent;
-            border: none;
+            border: solid white 1px;
             color: white;
         }
         #h3Div
