changed title text

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </span>
     </button>
     <p id="h3Div">
-        for Brigitte S.
+        made for Brigitte S.
     </p>
     <br/>
     <br/>
